--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
   <head>  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+    <meta name="theme-color" content="#000" />
 
     <title>albertobonora.ca Toronto Based Web Developer</title>
     <meta property="og:title" content="Alberto Bonora | Web Developer" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://www.albertobonora.ca/" />
     <meta property="og:image" content="img/bg.jpg" />
+    <meta property="og:description" content="Toronto based web developer with experience in using and building on Wordpress, JS, CSS, VueJS, React & more."/>
 
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="dist/css/raw/main.css" type="text/css" media="all">
+    <link rel="stylesheet" href="dist/css/min/main.min.css" type="text/css" media="all">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-683832-1"></script>
